i have complated all apis
